--- a/script_editor/app/views/users/admin.html.erb
+++ b/script_editor/app/views/users/admin.html.erb
@@ -21,8 +21,12 @@ It can be found at app/views/users/show.html.erb -->
           <!-- Modal content -->
           <div class="modal-content">
             <h4>Add New Group</h4>
-              <button id="createGroup" type="button" class="btn btn-info">Create Group</button>
-
+              <!-- <button id="createGroup" type="button" class="btn btn-info">Create Group</button> -->
+              <%= form_tag(admin_path) do %>
+                <%= label_tag :name, "ENTER GROUP NAME"  %><br>
+                <%= text_field_tag :name,''%>
+                <%= submit_tag "Create Group" %>
+              <% end %>
               <!-- Example here: https://datatables.net/examples/api/select_row.html -->
               <table id="allUsersGroups" class="table" style="width:100%">
                 <thead>
@@ -32,8 +36,8 @@ It can be found at app/views/users/show.html.erb -->
                 </thead>
                 <tbody>
                   <% @active_users.each do |usr| %>
-                  <tr>
-                    <td><%=usr[1]%></td>
+                  <tr >
+                    <td id="<%=usr[0]%>"><%=usr[1]%></td>
                   </tr>
                   <% end %>
                 </tbody>
@@ -63,7 +67,7 @@ It can be found at app/views/users/show.html.erb -->
                 <tbody>
                   <% @active_users.each do |usr| %>
                   <tr>
-                    <td><%=usr[1]%></td>
+                    <td id="<%=usr[0]%>"><%=usr[1]%></td>
                   </tr>
                   <% end %>
                 </tbody>
@@ -80,54 +84,46 @@ It can be found at app/views/users/show.html.erb -->
         </style>
 
         <script>
-            $(
-              $(document).ready(function() {
+            // $(
+            $(document).ready(function() {
               // When the user clicks on the button, open the modal
               $("#groupBtn").click(function(){
+                console.log("click group button");
                $("#groupModal").modal('show');
-              })
+
+               var table = $('#allUsersGroups').DataTable();
+               $('#allUsersGroups tbody').on( 'click', 'tr', function () {
+                     $(this).toggleClass('table-active');
+               } );
+               $('.createGroup').click( function () {
+                   alert( table.rows('.table-active').data().length +' row(s) active' );
+               } );
+             });
+
               $("#adminBtn").click(function(){
+
                $("#adminModal").modal('show');
-              })
+               var table = $('#allUsersAdmin').DataTable();
+
+               $('#allUsersAdmin tbody').on( 'click', 'tr', function () {
+                   $(this).toggleClass('table-active');
+               } );
+
+               $('.createAdmin').click( function () {
+                   alert( table.rows('.table-active').data().length +' row(s) active' );
+                 });
+
+              });
+
+             });
+
               // When the user clicks anywhere outside of the modal, close it
-              var modal = document.getElementsByClassName("modal")[0]
+              var modal = document.getElementsByClassName("modal")[0];
               window.onclick = function(event) {
                 if (event.target == modal) {
                   modal.style.display = "none";
                 }
               }
-              $(document).ready(function() {
-                  var table = $('#allUsersGroups').DataTable()
-
-                  $('#allUsersAdmin tbody').on( 'click', 'tr', function () {
-                        $(this).toggleClass('active');
-                  } );
-                  $('.createGroup').click( function () {
-                      alert( table.rows('.active').data().length +' row(s) active' );
-                  } );
-                    //{
-                    // select: {style: 'multi'},
-                    //   buttons: [
-                    //   {
-                    //       text: 'Get selected data',
-                    //       action: function () {
-                    //           var count = table.rows( { selected: true } ).count()
-                    //         }
-                    //   }
-                    // ]
-                    // });
-                  });
-              $(document).ready(function() {
-                  var table = $('#allUsersAdmin').DataTable();
-
-                  $('#allUsersAdmin tbody').on( 'click', 'tr', function () {
-                      $(this).toggleClass('active');
-                  } );
-
-                  $('.createAdmin').click( function () {
-                      alert( table.rows('.active').data().length +' row(s) active' );
-                  } );
-              } );
 
               function showGroupInfo(groupNum) {
               // $.get('/scene_render/' + scenceId)//get HTML to insert
@@ -137,10 +133,9 @@ It can be found at app/views/users/show.html.erb -->
                 var group =$("#GroupWindow");
                 group.html("");//clear previous data
               };
-              }
+            };
 
-              function bindGroupToggle()
-              {
+              function bindGroupToggle() {
               // $("#groupToggle").click(function(){
               //   console.log("ho");
               //   document.cookie="group_number=" + this.id;
@@ -155,9 +150,8 @@ It can be found at app/views/users/show.html.erb -->
                 //   console.log(document.cookie);
                 };
               //});
-              }
-            })
-            );
+            };
+          // );
         </script>
     </div>
 
