--- a/script_editor/app/views/users/admin.html.erb
+++ b/script_editor/app/views/users/admin.html.erb
@@ -21,12 +21,10 @@ It can be found at app/views/users/show.html.erb -->
           <!-- Modal content -->
           <div class="modal-content">
             <h4>Add New Group</h4>
-              <!-- <button id="createGroup" type="button" class="btn btn-info">Create Group</button> -->
-              <%= form_tag(admin_path) do %>
-                <%= label_tag :name, "ENTER GROUP NAME"  %><br>
-                <%= text_field_tag :name,''%>
-                <%= submit_tag "Create Group" %>
-              <% end %>
+            <button id="createGroup" type="button" class="btn btn-info">Create Group</button>
+              <form id="groupForm" onsubmit="return false;">
+                  <input type="text" id="userInput" />
+              </form>
               <!-- Example here: https://datatables.net/examples/api/select_row.html -->
               <table id="allUsersGroups" class="table" style="width:100%">
                 <thead>
@@ -66,8 +64,8 @@ It can be found at app/views/users/show.html.erb -->
                 </thead>
                 <tbody>
                   <% @active_users.each do |usr| %>
-                  <tr>
-                    <td id="<%=usr[0]%>"><%=usr[1]%></td>
+                  <tr id="<%=usr[0]%>">
+                    <td><%=usr[1]%></td>
                   </tr>
                   <% end %>
                 </tbody>
@@ -84,21 +82,25 @@ It can be found at app/views/users/show.html.erb -->
         </style>
 
         <script>
-            // $(
+            var users = [];
             $(document).ready(function() {
-              // When the user clicks on the button, open the modal
               $("#groupBtn").click(function(){
-                console.log("click group button");
                $("#groupModal").modal('show');
 
                var table = $('#allUsersGroups').DataTable();
                $('#allUsersGroups tbody').on( 'click', 'tr', function () {
                      $(this).toggleClass('table-active');
-               } );
-               $('.createGroup').click( function () {
-                   alert( table.rows('.table-active').data().length +' row(s) active' );
-               } );
-             });
+                     $row = $(this).closest("tr"),       // Finds the closest row <tr>
+                     $tds = $row.find("td");
+                     user_id = $tds[0].id
+                     if (users.includes(user_id)) {
+                       users.pop(user_id)
+                     } else {
+                       users.push(user_id)
+                     }
+                     console.log(users)
+               })
+             })
 
               $("#adminBtn").click(function(){
 
@@ -107,15 +109,31 @@ It can be found at app/views/users/show.html.erb -->
 
                $('#allUsersAdmin tbody').on( 'click', 'tr', function () {
                    $(this).toggleClass('table-active');
-               } );
+                   $row = $(this).closest("tr"),
+                   $tds = $row.find("td");
+                   user_id = $tds[0].id
+                   if (users.includes(user_id)) {
+                     users.pop(user_id)
+                   } else {
+                     users.push(user_id)
+                   }
+                   console.log(users)
 
-               $('.createAdmin').click( function () {
-                   alert( table.rows('.table-active').data().length +' row(s) active' );
-                 });
-
+           //         $.ajax({
+           //           method: "POST",
+           //           url: '/update/makeAdmin',
+           //           data: {
+           //               "meta": {
+           //                 "usersID" : users
+           //               }
+           //           }
+           //     } );
+           //
+           //    });
+           //
               });
-
-             });
+          })
+        })
 
               // When the user clicks anywhere outside of the modal, close it
               var modal = document.getElementsByClassName("modal")[0];
@@ -134,24 +152,34 @@ It can be found at app/views/users/show.html.erb -->
                 group.html("");//clear previous data
               };
             };
-
-              function bindGroupToggle() {
-              // $("#groupToggle").click(function(){
-              //   console.log("ho");
-              //   document.cookie="group_number=" + this.id;
-              //   console.log(document.cookie);
-              //   });
-              $(".groupToggle").click, function(index, element){
-                console.log("Yeah");
-                console.log(element);
-                // element.click(function(){
-                //   console.log("ho");
-                //   document.cookie="group_number=" + element.id;
-                //   console.log(document.cookie);
-                };
-              //});
-            };
-          // );
+              $("#createGroup").click(function(){
+                sendGroup();
+                console.log("clicked")
+              });
+              function sendGroup() {
+                var name = $("#userInput")
+                $.ajax({
+                  method: "POST",
+                  url: '/update/makeGroups',
+                  data: {
+                      "meta": {
+                        "usersID" : users,
+                        "name" : name
+                      }
+                  }
+                });
+              };
+              function sendAdmin() {
+                $.ajax({
+                  method: "POST",
+                  url: '/update/makeAdmin',
+                  data: {
+                      "meta": {
+                        "usersID" : users
+                      }
+                  }
+                })
+              };
         </script>
     </div>
 
