commit before merge

--- a/script_editor/app/views/users/admin.html.erb
+++ b/script_editor/app/views/users/admin.html.erb
@@ -24,16 +24,16 @@ It can be found at app/views/users/show.html.erb -->
           <div class="modal-content">
             <br>
             <h4>Add New Group</h4>
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD
             <button id="createGroup" type="button" class="btn btn-info">Create Group</button>
               <form id="groupForm" onsubmit="return false;">
                   <input type="text" id="userInput" />
               </form>
-=======
+======= -->
             <br>
             <button id="createGroup" type="button" class="btn btn-info" style="width: 150px; text-align: center">Create Group</button>
             <br>
->>>>>>> AlasdairSpringBreakSprint
+
               <!-- Example here: https://datatables.net/examples/api/select_row.html -->
               <table id="allUsersGroups" class="table table-hover" style="width:100%" >
                 <thead>
@@ -88,7 +88,7 @@ It can be found at app/views/users/show.html.erb -->
 
         </style>
 
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD
         <script>
             var users = [];
             $(document).ready(function() {
@@ -189,7 +189,7 @@ It can be found at app/views/users/show.html.erb -->
                 })
               };
         </script>
-=======
+======= -->
             <script>
                 // $(
                 $(document).ready(function() {
@@ -259,7 +259,6 @@ It can be found at app/views/users/show.html.erb -->
                 }
 
             </script>
->>>>>>> AlasdairSpringBreakSprint
     </div>
 
     <ul class="list-group">
