--- a/script_editor/app/views/users/show.html.erb
+++ b/script_editor/app/views/users/show.html.erb
@@ -12,7 +12,7 @@ It can be found at app/views/users/show.html.erb -->
 <p>
   <div class = "profile-display">
 <% if current_user.try(:admin?) %>
-      <a class="btn btn-primary" href="/admin/<%=current_user.id%>"  role="button">Admin Page</a>
+      <a type="button" class="btn btn-info" href="/admin/<%=current_user.id%>"  role="button">Admin Page</a>
 <%end%>
 <table style="width:30%">
  <tr class = "user_field">
